Closed Bug 103611 Opened 24 years ago Closed 24 years ago

Autocomplete popup comes up unexpectedly

Categories

(SeaMonkey :: Location Bar, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bryner, Assigned: masaki.katakai)

References

()

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

There seems to be a regression (within the past 2 weeks or so), where the Autocomplete popup is coming up unexpectedly when clicking in the urlbar. Ways to make it do so are: 1. Single-click anywhere to the right of the url (in the blank space of the urlbar). Expected behavior is just to place the cursor at the end of the URL, but this also drops down the autocomplete popup. 2. Double-click the text in the urlbar. Expected behavior is to select all text in the urlbar -- which it does, but it also opens the popup for no apparent reason. I'll try to track down when this started happening.
This seems to have been caused by katakai@japan.sun.com's checkin on 2001/09/28, log message: bug 81360 Correct behavior of ResetInputState() for gtk/ Fix memory corruption problem at Resetting IME on GTK r/sr=blizzard blizzard, katakai, any ideas?
Assignee: blakeross → katakai
Keywords: regression
Please fix this.
URL: 2Fcvsroothttp://bonsai.mozilla.org/cv...
Sorry for the regression, I'll try to look into this tomorrow.
Status: NEW → ASSIGNED
nsWindow::ResetInputState() in nsWindow.cpp of gtk now always sends NS_TEXT_EVENT=null to reset the existing composed text by just single-click. The event seems to invoke the popup.I'll try to fix the codes not to call NS_TEXT_EVENT=null when the composed text does not exist.
Could you somehow filter out double-clicks, instead?
Attached patch proposed patch (obsolete) — Splinter Review
I made a patch and attached. Blizzard, please review. The problem is that sending NS_TEXT_EVENT=null when composed text does not exist. We need to avoid the situation. So I did, In ResetInputState(), xic->IsPreeditComposing()==FALSE, just return; If ResetIC() returns 0 (XIM server does not return XmbResetIC()) if style is CALLBAKS (Mozilla draws composed text) we need to erase the existing composed text so send NS_TEXT_EVENT=null else (style is POSITION) Mozilla does not draw composed text, so we do not have to erase the composed text else (if exact length is returned) commit the text with NS_TEXT_EVENT signle-click and double-clicks does not mean in widget side in this case. We, Widget and IME side have never consider single-click and double-click. Widget can get ResetInputMethod() method from upper level when necessary. Again, sorry for the regression.
Comment on attachment 52695 [details] [diff] [review] proposed patch works for me... assuming the IME input still works correctly (which I can't test), r=bryner
Attachment #52695 - Flags: review+
Comment on attachment 52695 [details] [diff] [review] proposed patch sr=blizzard
Attachment #52695 - Flags: superreview+
Attached patch revised patchSplinter Review
I have found a problem on Solaris environment with Solaris XIM server. There is no problem on Linux. It seems that we need to call IMEComposeEnd(nsnull) when just return from ResetInputState() on Solaris environment. The difference from the prev patch is below. katakai@xymo> diff -c nsWindow.cpp.2 nsWindow.cpp *** nsWindow.cpp.2 Thu Oct 11 14:17:15 2001 --- nsWindow.cpp Thu Oct 11 14:17:26 2001 *************** *** 4182,4187 **** --- 4182,4188 ---- // if no composed text, should just return if(xic->IsPreeditComposing() == PR_FALSE) { + IMEComposeEnd(nsnull); return NS_OK; } Please review and give r= and sr=. I'm very sorry for duplicate work.
Comment on attachment 52695 [details] [diff] [review] proposed patch marking obsolete
Attachment #52695 - Attachment is obsolete: true
Comment on attachment 53072 [details] [diff] [review] revised patch r=bryner
Attachment #53072 - Flags: review+
Attachment #53072 - Flags: superreview+
Comment on attachment 53072 [details] [diff] [review] revised patch sr=blizzard
Thank you very much for reviews. I've checked in the patch into Trunk.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Is any chance to get this into 0.9.5? This also fixed bug 102282, which broke selection in URL-bar on Linux.
Yes, I'll try.
Sorry, I missed 0.9.5.
mass-verifying claudius' Fixed bugs which haven't changed since 2001.12.31. if you think this particular bug is not fixed, please make sure of the following before reopening: a. retest with a *recent* trunk build. b. query bugzilla to see if there's an existing, open bug (new, reopened, assigned) that covers your issue. c. if this does need to be reopened, make sure there are specific steps to reproduce (unless already provided and up-to-date). thanks! [set your search string in mail to "AmbassadorKoshNaranek" to filter out these messages.]
Status: RESOLVED → VERIFIED
Product: Core → SeaMonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: