bug 103611 Autocomplete popup comes up unexpectedly (regression by checkin for bug 81360) NS_TEXT_EVENT=null seems to invoke the popup window, so we need to avoid the event when no composed text by clicking on fields. r=bryner sr=blizzard